# Exercicios-em-C

./: CMakeLists.txt  README.md  main.c  p1.c  p2.c  p4.c  p5.c
Atividade1/: Questoes.md  problema2.c  problema4.c  problema5.c  problemas.md  q1.c  q3.c
Atividade2/: Questoes.md  q1.c  q2.c  q3.c  q4.c  q5.c  q6.c
Atividade3/: ImprimaZeroaDez.c  lousa1.c  lousa2.c  resposta1.c  resposta2.c  resposta3.c  resposta4.c
Atv3Agora/: arq.md  problemaCinco.c  problemaDois.c  problemaQuatro.c  problemaSeis.c  problemaTres.c  problemaUm.c
